# phantom_communicator

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  findings.txt  lala.py  pyproject.toml
docker_files/: create_development_ssh_tunnel.sh  development_ssh_config
docker_files/.ssh/: id_rsa_gitlab  id_rsa_gitlab.pub  id_rsa_jumpuser_rufus
examples/: try_asyncio.py  try_asyncio_conf.py  try_asyncio_parralel.py
examples/files/: 10.1.1.156
phantom_communicator/: communicator_asyncio.py  config  constants.py  exceptions.py  file_transfer.py  helpers.py  logger.py
phantom_communicator/command_blocks/: command.py  command_and_parse.py  command_block.py  command_result.py  constants.py  decorators.py  executors.py  genie_command.py  helpers.py  ip_utils.py  snmp_command.py
phantom_communicator/command_blocks/command_helpers/: get_config_item.py  get_config_value.py  get_config_value_position.py  static_route.py
phantom_communicator/command_blocks/commands/: __init__.py  cisco_iosxe.py  cisco_iosxe_show_ver.py  huawei_hvrp.py
phantom_communicator/command_blocks/parsers/: __init__.py
phantom_communicator/command_blocks/parsers/iosxe/: show_cellular.py  show_config_dhcp.py  show_controller_vdsl.py  show_featureset.py  show_flash_statistics.py  show_host_configuration.py  show_inventory.py  show_license_info.py  show_memory.py  show_memory_statistics.py  show_run_interfaces.py  show_run_ip_route.py  show_software.py  show_ssh_info.py  show_uptime.py  show_version.py
phantom_communicator/communicators/: __init__.py  base.py  cisco_iosxe.py  huawei_hvrp.py
phantom_communicator/snmp/: snmp.py
tests/: config  conftest.py  fake_cfg_conn.py  test_iosv_xe_communicator.py  test_netmiko.py  test_vrp_communicator.py  tests_multiple_devices.py
tests/command_blocks/: test_cisco_iosxe.py  test_huawei_hvrp.py
tests/command_blocks/parsers/iosxe/: test_all_parsers.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_cellular/: 001.txt  002.txt  003.txt  result_001.py  result_002.py  result_003.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_config_dhcp/: result_001.py  result_002.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_controller/: 001.txt
tests/command_blocks/parsers/iosxe/fixtures/test_show_controller_vdsl/: 002.txt  result_001.py  result_002.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_featureset/: 001.txt  result_001.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_flash_statistics/: 001.txt  result_001.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_host_configuration/: 001.txt  result_001.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_inventory/: 001.txt  result_001.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_license_info/: 001.txt  result_001.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_memory/: 001.txt  result_001.py  result_002.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_memory_statistics/: result_001.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_run_interfaces/: 011.txt  012.txt  013.txt  014.txt  027.txt  028.txt  029.txt  031.txt  032.txt  033.txt  result_001.py  result_002.py  result_003.py  result_004.py  result_005.py  result_006.py  result_007.py  result_008.py  result_009.py  result_010.py  result_011.py  result_012.py  result_013.py  result_014.py  result_015.py  result_016.py  result_017.py  result_018.py  result_019.py  result_020.py  result_021.py  result_022.py  result_023.py  result_024.py  result_025.py  result_026.py  result_027.py  result_028.py  result_029.py  result_030.py  (+3 more)
tests/command_blocks/parsers/iosxe/fixtures/test_show_run_ip_route/: 001.txt  002.txt  result_001.py  result_002.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_software/: 001.txt  002.txt  result_001.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_ssh_info/: 001.txt  result_001.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_uptime/: result_001.py
tests/command_blocks/parsers/iosxe/fixtures/test_show_version/: 001.txt  result_001.py
tests/command_blocks/test_data/: loader.py  show_ver_iosxe.txt
tests/communicators/: conftest.py  test_base.py  test_iosv_xe_communicator.py  test_vrp_communicator.py
tests/communicators/scrapli_replay_sessions/: test_iosv_xe_communicator_fake_cfgconn.yaml  test_iosv_xe_communicator_parse_genie.yaml  test_iosv_xe_communicator_send_command.yaml  test_iosv_xe_communicator_send_commands.yaml  test_vrp_communicator_get_version.yaml  test_vrp_communicator_send_command.yaml  test_vrp_communicator_send_commands.yaml
tests/files/: 10.1.1.131  test
tests/fixtures/: cisco_iosxe.py  huawei_hvrp.py
tests/scrapli_replay_sessions/: test_iosv_xe_communicator.yaml  test_vrp_communicator.yaml
trying_stuff/: try.py  try_asyncio.py  try_asyncio_conf.py  try_asyncio_parralel.py
